--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <so good>
-  </head>
-
-  <title>
-    
-  </title>
-</html>
+   <title>bimbofish</title>
+ </head>
+ <body>
+   <h1>helllo world</h1>
+   <p>bimbofish is the best chess player</p>
+ <body>
+<html
